# gnucashr

./: .Rbuildignore  .bazelrc  .covrignore  .gitignore  .gitlab-ci.yml  .lintr  .mcp.json  404.html  BUILD.bazel  CLAUDE.html  CLAUDE.md  CONTRIBUTING.html  CONTRIBUTING.md  Containerfile  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  MODULE.bazel  NAMESPACE  NEWS.md  PULL_REQUEST_TEMPLATE.html  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.html  SECURITY.md  WORKSPACE.bazel  _pkgdown.yml  authors.html  authors.md  codecov.yml  cran-comments.md  flake.nix  index.html  index.md  justfile  llms.txt  pkgdown.yml  search.json  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: R-CMD-check.yaml  nix-check.yaml  nix-matrix.yaml  pkgdown.yaml  release.yaml  rhub.yaml
R/: RcppExports.R  account-templates.R  book-collection.R  budget.R  commodity.R  consolidation.R  forecast-lazy.R  forecast-logged.R  globals.R  import-csv.R  import-ofx.R  lot.R  monad-logger.R  price.R  report-income-statement.R  scheduled-transaction.R  write-account.R  write-transaction.R
articles/: consolidation.html  consolidation.md  forecasting.html  forecasting.md  getting-started.html  getting-started.md  importing-data.html  importing-data.md  index.html  index.md  performance-benchmarks.html  performance-benchmarks.md  rcpp-internals.html  rcpp-internals.md
articles/articles/: performance-benchmarks.html  rcpp-internals.html
config/: gnucashr-daemon.json
deploy/k8s/: configmap.yaml  gnucashr-daemon.yaml  pvc.yaml  tinyclaw.yaml
dhall/: package.dhall  types.dhall
dhall/agents/: bank-feed-importer.dhall  bill-pay.dhall  invoice-generator.dhall  reconciler.dhall  report-generator.dhall  spend-monitor.dhall  subscription-manager.dhall  tax-estimator.dhall  transaction-categorizer.dhall
dhall/rules/: authorization.dhall  rate-limits.dhall
dhall/templates/: income-categories.dhall  saas-spend.dhall  tax-categories.dhall
dhall/types/: AccountMapping.dhall  AccountType.dhall  Agent.dhall  AgentRule.dhall  AuthorizationLevel.dhall  GnuCashOperation.dhall  TemplateAccount.dhall
docs/: AGENT_DEVELOPMENT_GUIDE.md  CONTRIBUTING.md  CRAN_SUBMISSION.md  MCP_ARCHITECTURE.md  PLAID_SETUP.md  REPOSITORY_SETUP.md  SECURITY.md
docs/epic/: 00-OVERVIEW.md  01-FOUNDATION.md  02-GNUCASH-INTERFACE.md  03-AGENT-FRAMEWORK.md  04-INTEGRATION.md  05-WEEK5-PLAN.md  06-WEEK6-PLAN.md  07-WEEK7-PLAN.md  08-WEEK8-PLAN.md  PROGRESS.md  RESEARCH.md
docs/reference/: README.md
docs/reference/gnucash-mcp/: .gitignore  LICENSE  README.md  pyproject.toml
docs/reference/gnucash-mcp/docs/: MULTI_CURRENCY_SPEC.md  MULTI_CURRENCY_TEST_PLAN.md
docs/reference/gnucash-mcp/src/gnucash_mcp/: book.py  logging_config.py  server.py
docs/reference/gnucash-mcp/tests/: __init__.py  test_account_slots.py  test_budget.py  test_logging.py  test_lots.py  test_scheduled.py
inst/: WORDLIST
inst/extdata/: sample-stripe.csv
inst/templates/: c-corporation.json  personal-finance.json
lib/gnucash-core/: CMakeLists.txt  a.out
lib/gnucash-core/include/gnucash/: agent.h  agent_state.h  approval.h  bank_feed.h  csv.h  dhall_config.h  fraction.h  guid.h  identity.h  mcp.h  ofx.h  result.h  scheduler.h  security.h  slots.h
lib/gnucash-core/src/: agent.cpp  agent_state.cpp  approval.cpp  audit.cpp  bank_feed.cpp  book.cpp  csv.cpp  dhall_config.cpp  guid.cpp  identity.cpp  json_api.cpp  json_api.h  main.cpp  mcp.cpp  ofx.cpp  reconcile.cpp  scheduler.cpp  security.cpp  slots.cpp
lib/gnucash-core/test/: test-agent-filtering.sh  test-audit-trail.sh  test-mcp-manual.sh  test-mcp-session.sh  test_agent.cpp  test_audit.cpp  test_bank_feed.cpp  test_book.cpp  test_csv.cpp  test_fraction.cpp  test_guid.cpp  test_json_api.cpp  test_mcp.cpp  test_ofx.cpp  test_reconcile.cpp  test_result.cpp  test_scheduler.cpp  test_security.cpp  test_slots.cpp  test_types.cpp
lib/gnucash-core/test/fixtures/: daemon-config.json  with-accounts.gnucash
man/: BookCollection.Rd  Budget.Rd  Commodity.Rd  ScheduledTransaction.Rd  account-templates.Rd  account_balances.Rd  add_fractions.Rd  annual_budget.Rd  apply_ic_eliminations.Rd  audited_collect.Rd  audited_compare_forecasts.Rd  audited_monte_carlo.Rd  audited_sensitivity.Rd  balance_sheet.Rd  batch_project_growth.Rd  bind_forecast_result.Rd  book_collection.Rd  budget_from_df.Rd  build_consolidated_trial_balance.Rd  calculate_consolidation_adjustments.Rd  calculate_running_balance.Rd  combine_csv_imports.Rd  combine_forecast_results.Rd  combine_results.Rd  compare_to_template.Rd  consolidation_summary.Rd  create_backup.Rd  delete_transaction.Rd  detect_gnucash_format.Rd  detect_ofx_version_cpp.Rd  double_to_fraction.Rd  err.Rd  extract_ofx_account_info.Rd  extract_quantile.Rd  flatten_template.Rd  forecast-logged.Rd  forecast_expr.Rd  format_percent.Rd  from_book.Rd  from_data.Rd  (+63 more)
news/: index.html  index.md
reference/: BookCollection.html  BookCollection.md  Budget.html  Budget.md  BudgetComparison.html  BudgetComparison.md  Commodity.html  Commodity.md  GnuCashDB.html  GnuCashDB.md  LazyForecast.html  LazyForecast.md  Lot.html  Lot.md  LotManager.html  LotManager.md  Price.html  Price.md  PriceDB.html  PriceDB.md  ScheduledTransaction.html  ScheduledTransaction.md  ScheduledTransactionManager.html  ScheduledTransactionManager.md  account-templates.html  account-templates.md  account_balance.html  account_balance.md  account_balances.html  account_balances.md  account_transactions.html  account_transactions.md  account_tree.html  account_tree.md  add_fractions.html  add_fractions.md  aggregate_by_type.html  aggregate_by_type.md  annual_budget.html  annual_budget.md  (+392 more)
src/: BUILD.bazel  Makevars  RcppExports.cpp  fraction.cpp  monte-carlo.cpp  ofx-parser.cpp
src/gnucash_mcp/: __init__.py  __main__.py
tests/: conftest.py  test_book.py  test_modules.py  test_tools.py
tests/testthat/: helper-common.R  (+14 more)
tools/: BUILD.bazel  r_packages.csv
vignettes/: consolidation.Rmd  forecasting.Rmd  getting-started.Rmd
(+3 files in other folders)
