# gnucashr Monorepo Root BUILD.bazel
#
# Workspace root for the gnucashr monorepo.
# R package lives in packages/gnucashr/
# C++ library will live in lib/gnucash-core/
# Agents will live in agents/

# Re-export package-level targets
# (individual BUILD.bazel files in subdirectories define their own targets)
