"""gnucashr monorepo - Bazel Module Configuration

Bazel handles C++ compilation for:
  - packages/gnucashr/src/ (Rcpp code, validation only)
  - lib/gnucash-core/ (standalone C++ library, full builds)
"""

module(
    name = "gnucashr",
    version = "0.3.0",
)

# Core Bazel rules
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_cc", version = "0.0.9")
