# gnucashr Bazel Workspace Configuration
# Uses rules_r for R package building with C++ caching

workspace(name = "gnucashr")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# ============================================================
# rules_r - R package building rules with C++ caching
# https://github.com/grailbio/rules_r
# ============================================================

http_archive(
    name = "rules_r",
    sha256 = "a55d9c5b4a1e1c3be3a7ffbf0e4f8fba9fcc40a1e5a51d5faba95f1d4a2d7c5e",
    strip_prefix = "rules_r-0.16.1",
    urls = [
        "https://github.com/grailbio/rules_r/archive/refs/tags/0.16.1.tar.gz",
    ],
)

load("@rules_r//R:dependencies.bzl", "r_rules_dependencies")
r_rules_dependencies()

load("@rules_r//R:repositories.bzl", "r_repository_list")
r_repository_list(
    name = "cran",
    package_list = "//tools:r_packages.csv",
    remote_repos = {
        "CRAN": "https://cloud.r-project.org",
    },
)

# ============================================================
# rules_cc - C/C++ rules for Rcpp compilation
# ============================================================

http_archive(
    name = "rules_cc",
    sha256 = "2037875b9a4456dce4a79d112a8ae885bbc4aad968e6587dca6e64f3a0900c2e",
    strip_prefix = "rules_cc-0.0.9",
    urls = [
        "https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/rules_cc-0.0.9.tar.gz",
    ],
)

load("@rules_cc//cc:repositories.bzl", "rules_cc_dependencies")
rules_cc_dependencies()

# ============================================================
# Skylib - Bazel utility functions
# ============================================================

http_archive(
    name = "bazel_skylib",
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()
