# gnucashr Bazel Workspace Configuration
# C++ compilation caching (R package build done via Nix)

workspace(name = "gnucashr")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# ============================================================
# rules_cc - C/C++ rules for compilation caching
# ============================================================

http_archive(
    name = "rules_cc",
    sha256 = "2037875b9a4456dce4a79d112a8ae885bbc4aad968e6587dca6e64f3a0900c2e",
    strip_prefix = "rules_cc-0.0.9",
    urls = [
        "https://github.com/bazelbuild/rules_cc/releases/download/0.0.9/rules_cc-0.0.9.tar.gz",
    ],
)

load("@rules_cc//cc:repositories.bzl", "rules_cc_dependencies")
rules_cc_dependencies()

# ============================================================
# Skylib - Bazel utility functions
# ============================================================

http_archive(
    name = "bazel_skylib",
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

# ============================================================
# NOTE: rules_r removed - doesn't support bzlmod well
# Full R package building is done via Nix flake
# Bazel is used for C++ compilation caching only
# ============================================================
