[project]
name = "gnucash-mcp"
version = "1.1.0"
description = "MCP server for GnuCash accounting data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Stephen", email = "stephen@ninetails.io" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "piecash>=1.2.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Repository = "https://github.com/ninetails-io/gnucash-mcp"

[project.scripts]
gnucash-mcp = "gnucash_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnucash_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
